--- a/table_challenge.html
+++ b/table_challenge.html
@@ -8,7 +8,7 @@
 <body>
     <table>
         <tr>
-            <td><img src="/1.jpeg" alt="profile picture"></td>
+            <td><img src="1.jpeg" alt="profile picture"></td>
             <td>
                 <h1>MANIK DEV AZAD</h1>
                 <p><em>Student at MNNIT,Allahabad</em></p>
